istio-teaching/destinationrules/hosts/dr-details-hosts-long.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: details
spec:
  host: details.istio.svc.cluster.local
