istio-teaching/destinationrules/hosts/dr-details-hosts-short.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: details
spec:
  host: details
